Fix spacing in Content component

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,18 +13,8 @@
 }
 
 #root {
-  max-width: 100vw;
+  min-width: 100vw;
   min-height: 100vh;
-}
-
-.App {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 2rem 2rem;
-  background-color: #14191F;
-  color: #F5F5F5;
 }
 
 /* Wishlist */
